<resources>
    <string name="app_name">Covid-19</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="option_search">Search</string>
    <string name="option_sort_country_a_to_z">Alphabetical, A to Z</string>
    <string name="option_sort_country_z_to_a">Alphabetical, Z to A</string>
    <string name="option_sort_total_confirmed_high_to_low">Total cases,  High to Low</string>
    <string name="option_sort_total_confirmed_low_to_high">Total cases, Low to High</string>

</resources>
